--- a/Meme-Generator/src/index.css
+++ b/Meme-Generator/src/index.css
@@ -4,3 +4,20 @@
 .liner-gradient-header {
   background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
 }
+
+/* custom.css */
+.text-stroke {
+  color: white;
+  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -1px 1px 0 #000,
+    2px 2px 0 #000;
+}
+
+.webkit-text-stroke {
+  color: white;
+  -webkit-text-stroke: 1px black;
+}
+
+.webkit-text-stroke-2 {
+  color: white;
+  -webkit-text-stroke: 2px black;
+}
